--- a/WebRoot/css/room.css
+++ b/WebRoot/css/room.css
@@ -42,14 +42,50 @@ body {
 
 #id2 input {
 	position: absolute;
+	height:25px;
+	width:150px;
 	left: 180px;
 	top: -24px;
+	border-radius:8px;
+	border:solid 1px #2277ff;
+	filter:Alpha(Opacity=70);opacity:0.5;-moz-opacity:0.5;
+}
+#id2 input:focus{
+	position: absolute;
+	height:28px;
+	width:180px;
+	left: 180px;
+	top: -24px;
+	border-radius:10px;
+	border:solid 1px #0011ff;
 }
 
 #id2 select {
 	position: absolute;
 	right: 60px;
 	top: -24px;
+}
+
+#login {
+	position: absolute;
+	right: 80px;
+	top: -24px;
+	color:#2277ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
+}
+#login:hover {
+	text-decoration:blink;
+	position: absolute;
+	right: 80px;
+	top: -24px;
+	color:#0000ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
 }
 
 #id3 {
