整合统一各界面

--- a/WebRoot/css/inRoomLogout.css
+++ b/WebRoot/css/inRoomLogout.css
@@ -42,8 +42,22 @@ body {
 
 #id2 input {
 	position: absolute;
+	height:25px;
+	width:150px;
 	left: 180px;
 	top: -24px;
+	border-radius:8px;
+	border:solid 1px #2277ff;
+	filter:Alpha(Opacity=70);opacity:0.5;-moz-opacity:0.5;
+}
+#id2 input:focus{
+	position: absolute;
+	height:28px;
+	width:180px;
+	left: 180px;
+	top: -24px;
+	border-radius:10px;
+	border:solid 1px #0011ff;
 }
 
 #id2 span{
