--- a/WebRoot/css/building.css
+++ b/WebRoot/css/building.css
@@ -33,10 +33,25 @@ body {
 	border-bottom:1px solid #CCCCCC;
 	margin-top:-16px;
 	}
-#id2 input{
-	position:absolute;
-	left:180px;
-	top:-24px;}
+#id2 input {
+	position: absolute;
+	height:25px;
+	width:150px;
+	left: 180px;
+	top: -24px;
+	border-radius:8px;
+	border:solid 1px #2277ff;
+	filter:Alpha(Opacity=70);opacity:0.5;-moz-opacity:0.5;
+}
+#id2 input:focus{
+	position: absolute;
+	height:28px;
+	width:180px;
+	left: 180px;
+	top: -24px;
+	border-radius:10px;
+	border:solid 1px #0011ff;
+}
 #id2 select{
 	position:absolute;
 	right:60px;
@@ -113,4 +128,49 @@ body {
 .close{
 	display:none;}
 
+#logout {
+	position: absolute;
+	right: 80px;
+	top: -14px;
+	color:#2277ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
+}
+
+#logout:hover {
+	text-decoration:blink;
+	position: absolute;
+	right: 80px;
+	top: -14px;
+	color:#0000ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
+}
+
+#switch {
+	position: absolute;
+	right: 70px;
+	top: -34px;
+	color:#2277ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
+}
+
+#switch:hover {
+	text-decoration:blink;
+	position: absolute;
+	right: 70px;
+	top: -34px;
+	color:#0000ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
+}
 
