--- a/WebRoot/css/checkpeople.css
+++ b/WebRoot/css/checkpeople.css
@@ -30,11 +30,27 @@ body {
 	position:relative;
 	width:1400px;
 	float:left;
-	border-bottom:1px solid #CCCCCC}
-#id2 input{
-	position:absolute;
-	left:180px;
-	top:-40px;}
+	border-bottom:1px solid #CCCCCC;
+	}
+#id2 input {
+	position: absolute;
+	height:25px;
+	width:150px;
+	left: 180px;
+	top: -42px;
+	border-radius:8px;
+	border:solid 1px #2277ff;
+	filter:Alpha(Opacity=70);opacity:0.5;-moz-opacity:0.5;
+}
+#id2 input:focus{
+	position: absolute;
+	height:28px;
+	width:180px;
+	left: 180px;
+	top: -42px;
+	border-radius:10px;
+	border:solid 1px #0011ff;
+}
 #id2 select{
 	position:absolute;
 	right:60px;
@@ -172,6 +188,16 @@ body {
 .a:hover{
 	color:#888888;
 }
+.b{
+	margin-top:105px;
+	margin-left:10px;
+	font-size:20px;
+	color:#FFFFFF;
+	text-decoration:none;
+}
+.b:hover{
+	color:#888888;
+}
 .open{
 	display:block;}
 .close{
@@ -245,4 +271,49 @@ body {
 	width:150px;
 	border:1px solid #123456;
 	background-color:#ffffff;
+}
+#logout {
+	position: absolute;
+	right: 80px;
+	top: -28px;
+	color:#2277ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
+}
+
+#logout:hover {
+	text-decoration:blink;
+	position: absolute;
+	right: 80px;
+	top: -28px;
+	color:#0000ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
+}
+
+#switch {
+	position: absolute;
+	right: 70px;
+	top: -48px;
+	color:#2277ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
+}
+
+#switch:hover {
+	text-decoration:blink;
+	position: absolute;
+	right: 70px;
+	top: -48px;
+	color:#0000ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
 }
