--- a/WebRoot/css/inRoom.css
+++ b/WebRoot/css/inRoom.css
@@ -42,8 +42,22 @@ body {
 
 #id2 input {
 	position: absolute;
+	height:25px;
+	width:150px;
 	left: 180px;
 	top: -24px;
+	border-radius:8px;
+	border:solid 1px #2277ff;
+	filter:Alpha(Opacity=70);opacity:0.5;-moz-opacity:0.5;
+}
+#id2 input:focus{
+	position: absolute;
+	height:28px;
+	width:180px;
+	left: 180px;
+	top: -24px;
+	border-radius:10px;
+	border:solid 1px #0011ff;
 }
 
 #id2 span{
@@ -122,26 +136,6 @@ body {
 	text-decoration: blink;
 	color: #ffffff;
 }
-
-.menv03 {
-	margin-top: 105px;
-	margin-left: 75px;
-}
-
-.sideleft {
-	display: none;
-}
-
-.a {
-	font-size: 20px;
-	color: #FFFFFF;
-	text-decoration: none;
-}
-
-.a:hover {
-	color: #888888;
-}
-
 .open {
 	display: block;
 }
@@ -386,4 +380,140 @@ body {
 }
 .desk{
 	background-image:url(../image/desk.jpg);
+}
+.icon3{
+	position:position;
+	top:110px;
+	width:150px;
+	height:40px;
+	margin-left:25px;
+}
+.icon3 a{
+	color:#2e2e2e;
+	text-decoration:none;
+	font-size:24px;
+	font-weight:bold;
+	padding:5px;
+	margin:5px;
+	}
+.icon3 a:link,.icon1 a:visited{
+	text-decoration:none;
+	}	
+.icon3 a:hover{
+	text-decoration:blink;
+	color:#ffffff;
+	}
+.icon4{
+	position:position;
+	top:150px;
+	width:150px;
+	height:40px;
+	left:25px;
+}
+.icon4 a{
+	color:#2e2e2e;
+	text-decoration:none;
+	font-size:24px;
+	font-weight:bold;
+	padding:5px;
+	margin:5px;
+	}
+.icon4 a:link,.icon1 a:visited{
+	text-decoration:none;
+	}	
+.icon4 a:hover{
+	text-decoration:blink;
+	color:#ffffff;
+	}
+.icon5{
+	position:position;
+	top:190px;
+	width:150px;
+	height:40px;
+	left:25px;
+}
+.icon5 a{
+	color:#2e2e2e;
+	text-decoration:none;
+	font-size:24px;
+	font-weight:bold;
+	padding:5px;
+	margin:5px;
+	}
+.icon5 a:link,.icon1 a:visited{
+	text-decoration:none;
+	}	
+.icon5 a:hover{
+	text-decoration:blink;
+	color:#ffffff;
+	}
+.menv03{
+	margin-top:105px;
+	margin-left:75px;
+}
+.sideleft{
+	display:none;}
+.a{
+	font-size:20px;
+	color:#FFFFFF;
+	text-decoration:none;
+}
+.a:hover{
+	color:#888888;
+}
+.b{
+	margin-top:105px;
+	margin-left:10px;
+	font-size:20px;
+	color:#FFFFFF;
+	text-decoration:none;
+}
+.b:hover{
+	color:#888888;
+}
+
+#logout {
+	position: absolute;
+	right: 80px;
+	top: -14px;
+	color:#2277ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
+}
+
+#logout:hover {
+	text-decoration:blink;
+	position: absolute;
+	right: 80px;
+	top: -14px;
+	color:#0000ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
+}
+
+#switch {
+	position: absolute;
+	right: 70px;
+	top: -34px;
+	color:#2277ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
+}
+
+#switch:hover {
+	text-decoration:blink;
+	position: absolute;
+	right: 70px;
+	top: -34px;
+	color:#0000ff;
+	font-family:arial;
+	font-style:oblique;
+	font-variant:small-caps;
+	text-decoration:none;
 }
