--- a/WebRoot/css/checkpeople.css
+++ b/WebRoot/css/checkpeople.css
@@ -268,7 +268,8 @@ body {
 	height:80px;
 }
 #id401 table tr td{
-	width:150px;
+	width:100px;
+	height:25px;
 	border:1px solid #123456;
 	background-color:#ffffff;
 }
@@ -316,4 +317,36 @@ body {
 	font-style:oblique;
 	font-variant:small-caps;
 	text-decoration:none;
+}
+.edit{
+	margin-left:10px;
+	border:none;
+	width:19px;
+	height:23px;
+	background-image:url("../image/edit.jpg");
+}
+
+.edit:hover{
+	margin-left:10px;
+	border:none;
+	width:19px;
+	height:23px;
+	background-image:url("../image/edit.jpg");
+	filter:Alpha(Opacity=70);opacity:0.7;-moz-opacity:0.7;
+}
+.delete{
+	margin-left:10px;
+	border:none;
+	width:25px;
+	height:25px;
+	background-image:url("../image/delete.jpg");
+}
+
+.delete:hover{
+	margin-left:10px;
+	border:none;
+	width:25px;
+	height:25px;
+	background-image:url("../image/delete.jpg");
+	filter:Alpha(Opacity=70);opacity:0.7;-moz-opacity:0.7;
 }
