--- a/WebRoot/css/index.css
+++ b/WebRoot/css/index.css
@@ -35,7 +35,7 @@ body {
 	border-bottom:1px solid #CCCCCC}
 #id2 input {
 	position: absolute;
-	height:25px;
+	height:28px;
 	width:150px;
 	left: 230px;
 	top: 20px;
@@ -51,6 +51,7 @@ body {
 	top: 20px;
 	border-radius:10px;
 	border:solid 1px #0011ff;
+	outline:none;
 }
 #login{
 	position:absolute;
