--- a/WebRoot/css/checkpeople.css
+++ b/WebRoot/css/checkpeople.css
@@ -34,7 +34,7 @@ body {
 	}
 #id2 input {
 	position: absolute;
-	height:25px;
+	height:28px;
 	width:150px;
 	left: 180px;
 	top: -42px;
@@ -50,6 +50,7 @@ body {
 	top: -42px;
 	border-radius:10px;
 	border:solid 1px #0011ff;
+	outline:none;
 }
 #id2 select{
 	position:absolute;
